# airflow-luigi-plugin

./: README.md  pyproject.toml  requirements.txt  setup.py
luigi_plugin/: __init__.py
luigi_plugin/operators/: luigi_operator.py
tests/: test_luigi_plugin.py
